Closed Bug 692366 Opened 14 years ago Closed 14 years ago

"Assertion failure: srcArgs.callee().getFunctionPrivate()->native() == native" with subarray()

Categories

(Core :: JavaScript Engine, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla10

People

(Reporter: jruderman, Assigned: luke)

Details

(Keywords: assertion, testcase)

Attachments

(1 file)

Uint8Array.subarray(newGlobal('new-compartment')); Assertion failure: srcArgs.callee().getFunctionPrivate()->native() == native, at js/src/jswrapper.cpp:740 I'm guessing this is related to bug 690825. (Tested rev 32536d199fcf)
Noone ever expects js_generic_native_method_dispatcher. The patch loosens the assert.
Assignee: general → luke
Status: NEW → ASSIGNED
Attachment #565418 - Flags: review?(jwalden+bmo)
Comment on attachment 565418 [details] [diff] [review] assert should allow for generic methods Review of attachment 565418 [details] [diff] [review]: ----------------------------------------------------------------- Grody.
Attachment #565418 - Flags: review?(jwalden+bmo) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Automatically extracted testcase for this bug was committed: https://hg.mozilla.org/mozilla-central/rev/efaf8960a929
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: