Bug 692366 - Soften nativeCall assert to allow for generic non-generic methods (yeah, that's right) (r=waldo)

--HG--
extra : rebase_source : 3bca2d458118cce3959f978a36a5c5aa85a5ef9c